kubernetes/apps/ai/open-webui/app/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: open-webui-policy
  labels:
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/name: open-webui
spec:
  description: Restrict open-webui egress to DNS, bifrost, searxng, and envoy-external for OIDC.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: open-webui
      app.kubernetes.io/name: open-webui
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ai
            k8s:app.kubernetes.io/instance: bifrost
            k8s:app.kubernetes.io/name: bifrost
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tools
            k8s:app.kubernetes.io/instance: searxng
            k8s:app.kubernetes.io/name: searxng
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            k8s:app.kubernetes.io/managed-by: envoy-gateway
            k8s:gateway.envoyproxy.io/owning-gateway-name: envoy-external
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "10443"
              protocol: TCP
